src/objects/OCD_Tier_Price_List_Line__c.object
<CustomObject>
    <description>Tier Price List Line for distributor</description>
    <fields>
        <fullName>Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ext Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Maximun_Volume__c</fullName>
        <description>Maximun volume in a tier</description>
        <label>Maximun Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimun_Volume__c</fullName>
        <description>Lower range in a tier</description>
        <label>Minimun Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_List_Line__c</fullName>
        <description>Parent price list line</description>
        <label>Price List Line</label>
        <referenceTo>REVVY__MnPriceListLine__c</referenceTo>
        <relationshipLabel>Tier Price List Lines</relationshipLabel>
        <relationshipName>Tier_Price_List_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Tier price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Sequence Number used for sorting purpose.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Number__c</fullName>
        <label>Tier Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Type__c</fullName>
        <label>Tier Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tier Price List Line</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Tier Price List Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tier Price List Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>